--- a/Übung 8/test.html
+++ b/Übung 8/test.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script type="module" src="./Aufgabe8_1_einkaufsliste.js"></script>
-<script type="module" src="./Aufgabe8_1_rednerliste.js"></script>
-<script type="module" src="./Aufgabe8_1_tabelle.js"></script>
-<script type="module" src="./Aufgabe8_1_balkendiagramm.js"></script>
-<script type="module" src="./Aufgabe8_1_bezier.js"></script>
+<script type="module" src="./balkediagramm_component.js"></script>
+<script type="module" src="./bezier_component.js"></script>
+<script type="module" src="./einkaufsliste_component.js"></script>
+<script type="module" src="./rednerliste_component.js"></script>
+<script type="module" src="./tabellen_component.js"></script>
 
 <body>
     <einkaufs-liste></einkaufs-liste>
