--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Engineering Master</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" href="./images/icons/icon-192x192.png">
+    <meta name="theme-color" content="#a02b2b" />
 </head>
 
 <body>
