Adjusted urls after folder rename

--- a/homepage-pages/01.html
+++ b/homepage-pages/01.html
@@ -87,19 +87,22 @@
     <div id="3">
         <h2>1.3 Wireframe with HTML and CSS: Tribute Page</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 1/Aufgabe1_3.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/01/Aufgabe1_3.html">hier</a></p>
     </div>
 
     <div id="4">
         <h2>1.4. Wireframe with HTML and CSS (Survey Form)</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 1/Aufgabe1_4.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/01/Aufgabe1_4.html">hier</a></p>
     </div>
 
     <div id="5">
         <h2>1.5. Wireframe with HTML and CSS (Product Landing Page)</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 1/Aufgabe1_5.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/01/Aufgabe1_5.html">hier</a></p>
     </div>
 </body>
 
