--- a/homepage-pages/04.html
+++ b/homepage-pages/04.html
@@ -25,26 +25,30 @@
     <div id="1">
         <h2>4.1. Einkaufsliste</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 4/Aufgabe4_1.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/04/Aufgabe4_1.html">hier</a></p>
     </div>
 
     <div id="2">
         <h2>4.2. Rednerliste mit Zeitmessung</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 4/Aufgabe4_2.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/04/Aufgabe4_2.html">hier</a></p>
     </div>
 
     <div id="3">
         <h2>4.3. Tabellenkalkulation mit den Bordmitteln des Webs</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 4/Aufgabe4_3.html">hier</a>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/04/Aufgabe4_3.html">hier</a>
         </p>
     </div>
 
     <div id="4">
         <h2>4.4. HTML-Editor</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 4/Aufgabe4_4.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/04/Aufgabe4_4.html">hier</a></p>
     </div>
 
 </body>
