--- a/homepage-pages/05.html
+++ b/homepage-pages/05.html
@@ -25,24 +25,26 @@
     <div id="1">
         <h2>5.1. Promises</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 5/Aufgabe5_1.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/05/Aufgabe5_1.html">hier</a></p>
     </div>
 
     <div id="2">
         <h2>5.2. async / await</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 5/Aufgabe5_2.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/05/Aufgabe5_2.html">hier</a></p>
     </div>
 
     <div id="3">
         <h2>5.3. Web Worker</h2>
 
         <p class="answer">Die Lösung dieser Aufgabe ohne einen WebWorker findet man <a
-                href="../Übung 5/Aufgabe5_3.html">hier</a>
+                href="/WEM-Project/exercises/05/Aufgabe5_3.html">hier</a>
         </p>
 
         <p class="answer">Die Lösung dieser Aufgabe mit einem WebWorker findet man <a
-                href="../Übung 5/Aufgabe5_3_Worker.html">hier</a>
+                href="/WEM-Project/exercises/05/Aufgabe5_3_Worker.html">hier</a>
         </p>
 
         <p class="question">Messen Sie die Geschwindigkeit Ihrer beiden Lösungen und geben Sie hier Ihre Messergebnisse
@@ -55,7 +57,8 @@
     <div id="4">
         <h2>5.4. WWW-Navigator</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 5/Aufgabe5_4.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/05/Aufgabe5_4.html">hier</a></p>
     </div>
 
 </body>
