--- a/homepage-pages/02.html
+++ b/homepage-pages/02.html
@@ -25,13 +25,15 @@
     <div id="1">
         <h2>2.1. Responsiv mit Flexbox Desktop-First</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 2/Aufgabe2_1.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/02/Aufgabe2_1.html">hier</a></p>
     </div>
 
     <div id="2">
         <h2>2.2. Responsiv mit Grid Mobile-First</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 2/Aufgabe2_2.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/02/Aufgabe2_2.html">hier</a></p>
     </div>
 
     <div id="3">
@@ -40,14 +42,16 @@
         <p class="answer">Die Flexbox-Lösung dieser Aufgabe findet man <a
                 href="../Übung 2/Aufgabe2_3_flex.html">hier</a></p>
 
-        <p class="answer">Die Grid-Lösung dieser Aufgabe findet man <a href="../Übung 2/Aufgabe2_3_grid.html">hier</a>
+        <p class="answer">Die Grid-Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/02/Aufgabe2_3_grid.html">hier</a>
         </p>
     </div>
 
     <div id="4">
         <h2>2.4. Responsiv mit Grid</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 2/Aufgabe2_4.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/02/Aufgabe2_4.html">hier</a></p>
     </div>
 
 </body>
