Adjusted urls after folder rename

--- a/homepage-pages/06.html
+++ b/homepage-pages/06.html
@@ -25,13 +25,15 @@
     <div id="1">
         <h2>6.1. Statistik-Balkendiagramm in SVG</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 6/Aufgabe6_1.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/06/Aufgabe6_1.html">hier</a></p>
     </div>
 
     <div id="2">
         <h2>6.2. SVG Bezier-Animation</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 6/Aufgabe6_2.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/06/Aufgabe6_2.html">hier</a></p>
     </div>
 </body>
 
