--- a/homepage-pages/08.html
+++ b/homepage-pages/08.html
@@ -8,11 +8,11 @@
     <title>Modulares Web</title>
 </head>
 
-<script type="module" src="../Übung 8/balkediagramm_component.js"></script>
-<script type="module" src="../Übung 8/bezier_component.js"></script>
-<script type="module" src="../Übung 8/einkaufsliste_component.js"></script>
-<script type="module" src="../Übung 8/rednerliste_component.js"></script>
-<script type="module" src="../Übung 8/tabellen_component.js"></script>
+<script type="module" src="/WEM-Project/exercises/08/balkediagramm_component.js"></script>
+<script type="module" src="/WEM-Project/exercises/08/bezier_component.js"></script>
+<script type="module" src="/WEM-Project/exercises/08/einkaufsliste_component.js"></script>
+<script type="module" src="/WEM-Project/exercises/08/rednerliste_component.js"></script>
+<script type="module" src="/WEM-Project/exercises/08/tabellen_component.js"></script>
 
 <style>
     .question {
@@ -52,13 +52,14 @@
         <bezier-animation></bezier-animation>
 
         <p class="answer">Falls die Komponenten nicht laden sollte, können diese auch <a
-                href="../Übung 8/test.html">hier</a> betrachtet werden.</p>
+                href="/WEM-Project/exercises/08/test.html">hier</a> betrachtet werden.</p>
     </div>
 
     <div id="2">
         <h2>8.2. LitElement Menü-Komponente</h2>
 
-        <p class="answer">Die Lösung dieser Aufgabe findet man <a href="../Übung 8/Aufgabe8_2.html">hier</a></p>
+        <p class="answer">Die Lösung dieser Aufgabe findet man <a
+                href="/WEM-Project/exercises/08/Aufgabe8_2.html">hier</a></p>
     </div>
 </body>
 
