--- a/homepage-pages/11.html
+++ b/homepage-pages/11.html
@@ -182,7 +182,8 @@ export function getPrimes(): i32 {
 }
         </code></pre>
 
-        <p class="answer">Die Lösung für die Benchmark-Tests findet man <a href="../Übung 11/index.html">hier</a>.
+        <p class="answer">Die Lösung für die Benchmark-Tests findet man <a
+                href="/WEM-Project/exercises/11/index.html">hier</a>.
         </p>
 
         <p class="question">Geben Sie hier Ihre Messergebnisse (min, max, avg) ein:</p>
