Adjusted urls after folder rename

--- a/homepage-pages/02.html
+++ b/homepage-pages/02.html
@@ -40,7 +40,7 @@
         <h2>2.3. Holy Grail</h2>
 
         <p class="answer">Die Flexbox-Lösung dieser Aufgabe findet man <a
-                href="../Übung 2/Aufgabe2_3_flex.html">hier</a></p>
+                href="/WEM-Project/exercises/02/Aufgabe2_3_flex.html">hier</a></p>
 
         <p class="answer">Die Grid-Lösung dieser Aufgabe findet man <a
                 href="/WEM-Project/exercises/02/Aufgabe2_3_grid.html">hier</a>
